--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001 --turbopack",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "next lint"
+    "lint": "eslint --config eslint.config.js ."
   },
   "dependencies": {
     "@tanstack/react-query": "^5.74.9",
-    "@tanstack/react-query-devtools": "^5.74.8",
     "@types/react-router-dom": "^5.3.3",
     "artplayer": "^5.2.3",
     "axios": "^1.9.0",
